--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
 
-    
+<head>
+    {% include head.html %}
+</head>
 
 
 <body>
-   
+    {% include navber.html %}
 
 
 
@@ -13,7 +15,7 @@
 
 
 
-
+{% include script.html %}
    
 </body>
 </html>
