--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,7 +1,7 @@
  <!-- Required Js -->
- <script src="assets/js/jquery-3.3.1.min.js"></script>
- <script src="assets/js/popper.min.js"></script>
- <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+ <script src="{{ site.baseurl }}/assets/js/jquery-3.3.1.min.js"></script>
+ <script src="{{ site.baseurl }}/assets/js/popper.min.js"></script>
+ <script src="{{ site.baseurl }}/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
  <script>
      $(document).ready(function () {
