--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,16 @@
 
 <body>
     {% include navber.html %}
+    <div class="container">
+       
+        {{ content }}
+    </div>
 
 
 
-{{ content }}
 
 
-
+{% include footer.html %}
 {% include script.html %}
    
 </body>
