--- a/_includes/navber.html
+++ b/_includes/navber.html
@@ -1,26 +1,33 @@
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-        <img src="{{ site.baseurl }}/assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="QR Code Generator">
-        QR Code Generator
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-        </ul>
+    <div class="container">
+        <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}{{ site.data.nav.brand.link }}">
+            <img src="{{ site.baseurl }}/{{ site.data.nav.brand.logo }}" width="30" height="30" class="d-inline-block align-top" alt="{{ site.data.nav.brand.name }}">
+            {{ site.data.nav.brand.name }}
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                {% for link in site.data.nav.links %}
+                    {% if link.dropdown %}
+                        <li class="nav-item dropdown {% if page.url == link.link %}active{% endif %}">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                {{ link.name }}
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                {% for sublink in link.sublinks %}
+                                    <a class="dropdown-item {% if page.url == sublink.link %}active{% endif %}" href="{{ site.url }}{{ site.baseurl }}{{ sublink.link }}">{{ sublink.name }}</a>
+                                {% endfor %}
+                            </div>
+                        </li>
+                    {% else %}
+                        <li class="nav-item {% if page.url == link.link %}active{% endif %}">
+                            <a class="nav-link" href="{{ site.url }}{{ site.baseurl }}{{ link.link }}">{{ link.name }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </nav>
