--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,5 @@
+<!-- <meta name="google-site-verification" content="your_google_verification_code" /> -->
+
 <title>{{ site.title }}</title>
 <!-- Meta -->
 <meta charset="utf-8">
